compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__let_exhaustiveness2.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1441
expression: "\npub fn main(r) {\n    let Error(_) = r\n    Nil\n}\n"
---
error: Not exhaustive pattern match
  ┌─ /src/one/two.gleam:3:5
  │
3 │     let Error(_) = r
  │     ^^^^^^^^^^^^^^^^

This assignment does not match all possibilities.
Either use a case expression with patterns for each possible
value, or use `let assert` rather than `let`.

These values are not matched:

  - Ok


